--- a/Customizable-FE/src/app/json-form/input-select/input-select.component.html
+++ b/Customizable-FE/src/app/json-form/input-select/input-select.component.html
@@ -1,8 +1,10 @@
-<mat-form-field floatLabel="auto" fxFlex="100%">
-  <mat-label>{{control?.label}}:</mat-label>
-  <mat-select formControlName="select">
-    <mat-option [value]="1">aaaa</mat-option>
-    <mat-option [value]="2">bbbb</mat-option>
-    <mat-option [value]="3">cccc</mat-option>
-  </mat-select>
-</mat-form-field>
+<div [formGroup]="formGroup">
+	<mat-form-field floatLabel="auto" fxFlex="100%">
+		<mat-label>{{control.label}}:</mat-label>
+		<mat-select [formControlName]="control.name" (selectionChange)="onChanged($event)">
+			<mat-option [value]="1">aaaa</mat-option>
+			<mat-option [value]="2">bbbb</mat-option>
+			<mat-option [value]="3">cccc</mat-option>
+		</mat-select>
+	</mat-form-field>
+</div>
