--- a/Customizable-FE/src/app/json-form/json-form.component.html
+++ b/Customizable-FE/src/app/json-form/json-form.component.html
@@ -4,8 +4,10 @@
 
     <div class="control" *ngFor="let control of row.controls">
 
-      <app-input-text *ngIf="control.type === 'Text'" [formGroup]="theForm" [control]="control"></app-input-text>
-      <app-input-select *ngIf="control.type === 'Select'" [formGroup]="theForm" [control]="control"></app-input-select>
+      <app-input-text *ngIf="control.type === 'text'" [formGroup]="theForm" [control]="control"></app-input-text>
+      <app-input-select *ngIf="control.type === 'select'" [formGroup]="theForm" [control]="control"></app-input-select>
+      <app-input-checkbox *ngIf="control.type === 'checkbox'" [formGroup]="theForm"
+        [control]="control"></app-input-checkbox>
 
 
     </div>
