--- a/Customizable-FE/src/app/json-form/json-form.component.html
+++ b/Customizable-FE/src/app/json-form/json-form.component.html
@@ -1,8 +1,8 @@
 <form [formGroup]="theForm" (ngSubmit)="onSubmit()">
 
-  <div class="row" *ngFor="let row of jsonFormData?.rows">
+  <div class="row" *ngFor="let row of jsonFormData?.rows" fxLayout="row">
 
-    <div class="control" *ngFor="let control of row.controls">
+    <div class="control-container" *ngFor="let control of row.controls">
 
       <app-input-text *ngIf="control.type === 'text'" [formGroup]="theForm" [control]="control"></app-input-text>
       <app-input-select *ngIf="control.type === 'select'" [formGroup]="theForm" [control]="control"></app-input-select>
