--- a/Customizable-FE/src/app/edit-form/edit-form.component.html
+++ b/Customizable-FE/src/app/edit-form/edit-form.component.html
@@ -1,39 +1,49 @@
-<!-- <div cdkDropList class="form" (cdkDropListDropped)="drop($event)"> -->
-<div cdkDropListGroup class="form">
+<div class="page">
 
-  <div *ngFor="let row of rows; let rowIdx = index">
-    <div cdkDropList cdkDropListOrientation="horizontal" class="row" cdkDrag [cdkDropListData]="row.controls"
-      (cdkDropListDropped)="dropInRow($event)" [cdkContextMenuTriggerFor]="row_context_menu"
-      [cdkContextMenuTriggerData]="{id: row.id, row, rowIdx}">
-      <div class="field" *ngFor="let control of row.controls; let controlIdx = index" cdkDrag [cdkDragData]="control"
-        [cdkContextMenuTriggerFor]="field_context_menu" [cdkContextMenuTriggerData]="{control, rowIdx, controlIdx}">
-        <app-edit-form-control [control]="control"></app-edit-form-control>
-      </div>
+  <div>Edit Form</div>
 
-      <div class="add-button-padding" *ngIf="row.controls.length === 0"></div>
-      <div class="field-add-button">
-        <button (click)="addControl(row)">+</button>
+  <div cdkDropListGroup class="form">
+
+    <div class="edit-content">
+      <div *ngFor="let row of rows; let rowIdx = index">
+        <div cdkDropList cdkDropListOrientation="horizontal" class="row" cdkDrag [cdkDropListData]="row.controls"
+          (cdkDropListDropped)="dropInRow($event)" [cdkContextMenuTriggerFor]="row_context_menu"
+          [cdkContextMenuTriggerData]="{id: row.id, row, rowIdx}">
+          <div class="field" *ngFor="let control of row.controls; let controlIdx = index" cdkDrag
+            [cdkDragData]="control" [cdkContextMenuTriggerFor]="field_context_menu"
+            [cdkContextMenuTriggerData]="{control, rowIdx, controlIdx}">
+            <app-edit-form-control [control]="control"></app-edit-form-control>
+          </div>
+
+          <div class="add-button-padding" *ngIf="row.controls.length === 0"></div>
+          <div class="field-add-button">
+            <button (click)="addControl(row)">+</button>
+          </div>
+        </div>
       </div>
     </div>
+
+    <div class="action-row">
+      <button (click)="addRow()">Add Row</button>
+      <button (click)="displayForm()">Display Form</button>
+    </div>
+
   </div>
+
+
+  <ng-template #field_context_menu let-control="control" let-rowIdx="rowIdx" let-controlIdx="controlIdx">
+    <div class="field-menu" cdkMenu>
+      <button class="field-menu-item" cdkMenuItem (click)="editControlClicked(control)">Edit</button>
+      <button class="field-menu-item" cdkMenuItem (click)="deleteControlClicked(rowIdx, controlIdx)">Delete</button>
+    </div>
+  </ng-template>
+
+  <ng-template #row_context_menu let-id="id">
+    <div class="field-menu" cdkMenu>
+      <button class="field-menu-item" cdkMenuItem (click)="moveUpRowClicked(id)">Move Up</button>
+      <button class="field-menu-item" cdkMenuItem (click)="moveDownRowClicked(id)">Move Down</button>
+      <button class="field-menu-item" cdkMenuItem (click)="deleteRowClicked(id)">Delete</button>
+    </div>
+  </ng-template>
+
 </div>
-
-<div>
-  <button (click)="addRow()">Add Row</button>
-  <button (click)="displayForm()">Display Form</button>
-</div>
-
-<ng-template #field_context_menu let-control="control" let-rowIdx="rowIdx" let-controlIdx="controlIdx">
-  <div class="field-menu" cdkMenu>
-    <button class="field-menu-item" cdkMenuItem (click)="editControlClicked(control)">Edit</button>
-    <button class="field-menu-item" cdkMenuItem (click)="deleteControlClicked(rowIdx, controlIdx)">Delete</button>
-  </div>
-</ng-template>
-
-<ng-template #row_context_menu let-id="id">
-  <div class="field-menu" cdkMenu>
-    <button class="field-menu-item" cdkMenuItem (click)="moveUpRowClicked(id)">Move Up</button>
-    <button class="field-menu-item" cdkMenuItem (click)="moveDownRowClicked(id)">Move Down</button>
-    <button class="field-menu-item" cdkMenuItem (click)="deleteRowClicked(id)">Delete</button>
-  </div>
-</ng-template>
