--- a/Customizable-FE/src/app/edit-form/edit-form.component.scss
+++ b/Customizable-FE/src/app/edit-form/edit-form.component.scss
@@ -1,19 +1,30 @@
+.page {
+  width: 100%;
+  padding: 6px;
+  display: block;
+  box-sizing: border-box;
+}
+
 .form {
-  width: 75%;
-  max-width: 100%;
+  min-height: 400px;
+  width: 100%;
   border: solid 1px #ccc;
-  min-height: 60px;
   display: block;
   background: white;
   border-radius: 4px;
   overflow: hidden;
 }
 
+.edit-content {
+  min-height: 340px;
+  display: block;
+}
+
 .row {
   height: 60px;
   width: 100%;
   padding: 4px;
-  border-bottom: solid 1px #ccc;
+  border-bottom: solid 1px #ccc !important;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -110,4 +121,19 @@
 
 .field-menu-item:active {
   background-color: rgb(170, 170, 170);
+}
+
+.action-row {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+
+  button {
+    height: 24px;
+    width: 100px;
+  }
 }
