--- a/Customizable-FE/src/app/json-form/input-text/input-text.component.html
+++ b/Customizable-FE/src/app/json-form/input-text/input-text.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="formGroup">
-	<mat-form-field floatLabel="auto" fxFlex="100%">
-		<mat-label>{{control.label}}</mat-label>
-		<input type="text" matInput [formControlName]="control.name" [placeholder]="control.placeholder ?? ''"
-			onchange="onChanged($event)" />
-	</mat-form-field>
+  <mat-form-field floatLabel="auto" fxFlex="100%">
+    <mat-label>{{control.label}}</mat-label>
+    <input type="text" matInput [formControlName]="control.name" [placeholder]="control.placeholder ?? ''"
+      (onchange)="onChanged($event)" />
+  </mat-form-field>
 </div>
