--- a/Customizable-FE/src/app/edit-form/edit-form.component.scss
+++ b/Customizable-FE/src/app/edit-form/edit-form.component.scss
@@ -30,8 +30,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  gap: 6px;
   box-sizing: border-box;
-  cursor: move;
   background: white;
   font-size: 14px;
 }
@@ -42,9 +42,9 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  margin: 2px;
   border: 1px solid #bbb;
   background-color: #eee;
+  cursor: move;
 }
 
 .cdk-drag-preview {
@@ -61,6 +61,7 @@
 
 .field-add-button {
   width: 30px;
+  min-width: 30px;
   height: 100%;
   padding: 4px;
   display: flex;
