--- a/Customizable-FE/src/app/json-form/json-form.component.scss
+++ b/Customizable-FE/src/app/json-form/json-form.component.scss
@@ -4,13 +4,16 @@
 }
 
 .row {
+  padding: 6px;
+}
+
+.row-content {
   min-height: 60px;
-  width: 100%;
-  padding: 4px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  gap: 6px;
 }
 
 .control-container {
