--- a/Customizable-FE/src/app/edit-form-control/edit-form-control.component.html
+++ b/Customizable-FE/src/app/edit-form-control/edit-form-control.component.html
@@ -3,41 +3,14 @@
 
     <div class="row" fxLayout="row">
 
-      <ng-container *ngIf="control.type === 'text'">
-        <mat-form-field floatLabel="auto" fxFlex="100%">
-          <mat-label>{{control.label}}:</mat-label>
-          <input type="text" matInput formControlName="input" [placeholder]="control.placeholder ?? ''" />
-        </mat-form-field>
-      </ng-container>
+      <app-input-text *ngIf="control.type === 'text'" [formGroup]="theForm" [control]="control"></app-input-text>
+      <app-input-select *ngIf="control.type === 'select'" [formGroup]="theForm" [control]="control"></app-input-select>
+      <app-input-checkbox *ngIf="control.type === 'checkbox'" [formGroup]="theForm"
+        [control]="control"></app-input-checkbox>
+      <app-input-datepicker *ngIf="control.type === 'datepicker'" [formGroup]="theForm"
+        [control]="control"></app-input-datepicker>
+      <app-section-header *ngIf="control.type === 'section-header'" [control]="control"></app-section-header>
 
-      <ng-container *ngIf="control.type === 'select'">
-        <mat-form-field floatLabel="auto" fxFlex="100%">
-          <mat-label>{{control.label}}:</mat-label>
-          <mat-select formControlName="select">
-            <mat-option [value]="1">aaaa</mat-option>
-            <mat-option [value]="2">bbbb</mat-option>
-            <mat-option [value]="3">cccc</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </ng-container>
-
-      <ng-container *ngIf="control.type === 'checkbox'">
-        <mat-checkbox formControlName="checkbox">{{control.label}}</mat-checkbox>
-      </ng-container>
-
-      <ng-container *ngIf="control.type === 'section-header'">
-        <app-section-header [control]="control"></app-section-header>
-      </ng-container>
-
-      <ng-container *ngIf="control.type === 'datepicker'">
-        <mat-form-field appearance="fill">
-          <mat-label>{{control.label}}</mat-label>
-          <input matInput [matDatepicker]="picker" formControlName="datepicker">
-          <mat-hint>{{control.hint ?? ''}}</mat-hint>
-          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-      </ng-container>
 
     </div>
   </form>
