--- a/Customizable-FE/src/app/json-form/section-header/section-header.component.scss
+++ b/Customizable-FE/src/app/json-form/section-header/section-header.component.scss
@@ -1,11 +1,14 @@
 :host{
   width: 100%;
   height: 100%;
+  align-items: center;
 }
 
 .section-header {
   font-size: 20px;
   font-weight: 700;
-  padding-top: 8px;
+  padding-top: 16px;
   padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
