--- a/Customizable-FE/src/app/json-form/input-text/input-text.component.html
+++ b/Customizable-FE/src/app/json-form/input-text/input-text.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="formGroup">
+<div [formGroup]="formGroup" [ngClass]="displayComponent ? '' : 'hide'">
   <mat-form-field floatLabel="auto" fxFlex="100%">
     <mat-label>{{control.label}}</mat-label>
     <input type="text" matInput [formControlName]="control.name" [placeholder]="control.placeholder ?? ''"
