tweak checkbox layout

--- a/Customizable-FE/src/app/json-form/input-checkbox/input-checkbox.component.html
+++ b/Customizable-FE/src/app/json-form/input-checkbox/input-checkbox.component.html
@@ -1,3 +1,3 @@
-<div [formGroup]="formGroup">
-    <mat-checkbox [formControlName]="control.name">{{control.label}}</mat-checkbox>
+<div [formGroup]="formGroup" class="checkbox-container">
+  <mat-checkbox [formControlName]="control.name">{{control.label}}</mat-checkbox>
 </div>
